--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "chart.js": "^2.8.0",
+    "china-area-data": "^4.0.0",
     "element-ui": "^2.4.11",
     "node-sass": "^4.12.0",
     "vue": "^2.5.2",
